--- a/packages/truffle-provider/package.json
+++ b/packages/truffle-provider/package.json
@@ -27,7 +27,7 @@
     "web3": "github:trufflesuite/web3.js#1.0"
   },
   "devDependencies": {
-    "ganache-cli": "6.2.3",
+    "ganache-core": "^2.3.1",
     "mocha": "5.2.0"
   },
   "publishConfig": {
